update all readme.md files to include manifold plugin configuration changes required for JDK 26+, specifically the two --add-exports and --add-opens options.